changed formatting on story list items

--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -10,7 +10,7 @@
 	
 </div>
 
-<div class="shelf-whole col-sm-12 text-center center-block">
+<div ng-if="shelf" class="shelf-whole col-sm-12 text-center center-block">
 	<div class=" shelf-top"></div>
 	<div class="shelf clearfix"></div>
 
