--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -1,7 +1,8 @@
 <div class="panel">
     <div class="panel-heading">
         <div class="clearfix">
-            <h3 class="btnpadding">My Tools</h3>
+            <h3 ng-if="!makingNewLevel" class="btnpadding">My Tools</h3>
+            <h3 ng-if="makingNewLevel">Tools available for this level</h3>
         </div>
         <hr />
 
