--- a/browser/js/level-editor/level-editor.html
+++ b/browser/js/level-editor/level-editor.html
@@ -1,54 +1,52 @@
 <div class="container">
-	<!--Left side of the page-->
-	<form ng-submit='savePage()'>
-		<button type='submit'>Save Page</button>
-		<div class="col-md-6 col-sm-12">
-			<!--Text -->
-			<div class="storyText">
-				<textarea type='text' class='form-control' ng-model='page.text' placeholder='Enter page text'>
-				</textarea>
+	<div class='col-xs-12 col-sm-6 storyText'>
+		<textarea type='text' class='form-control' ng-model='page.text' placeholder='Enter page text'>
+		</textarea>
+	</div>
+	<!-- this right-page id is imporant because it is used by craft to determine screen size.  it must be on a col-sm-6-->
+	<div class='col-xs-12 col-sm-6 hint' id='right-page'>
+		<md-input-container>
+	      	<label>Enter a hint</label>
+	      	<input ng-model="page.hint">
+	    </md-input-container>
+	    <!-- dropdown for concepts -->
+		<div class="col-sm-12 col-md-4 nav_button" dropdown >
+			<button id="single-button" type="button" class="btn btn-default btn-block" dropdown-toggle ng-disabled="disabled">
+			Select concepts<span class="caret"></span>
+			</button>
+			<ul class="list-group dropdown-menu concept-menu" role="menu" aria-labelledby="single-button">
+				<li ng-repeat="concept in possConcepts" ng-click="toggleConcept(concept, $event)" class="list-group-item">
+					<input type="checkbox" ng-model="clickedConcepts[concept]"/> {{concept}}
+				</li>
+			</ul>
+        </div>
+	</div>
+	<!-- add a variable -->
+	<new-var-form></new-var-form>	
+	<!-- gameboard -->
+	<div class='col-xs-12 col-sm-6 col-md-3'>
+		<h4>Add to Board</h4>
+		<div id="canvas" class="img-square">
+			<div id="cr-stage" ng-style="{background: url({{page.boardBackground}})}" class="text-center center-block">
+			<div ng-repeat="i in grid track by $index" style="height:{{size}}; width:{{size}}" class="square"></div>
 			</div>
-			<div>
-				<div class="hint">
-					<md-input-container>
-				      	<label>Enter a hint</label>
-				      	<input ng-model="page.hint">
-				    </md-input-container>
-				</div>
-					<!--<label for='concepts'>Select Concepts</label>-->
-				<!-- dropdown for concepts -->
-				<div class="btn-group inline" uib-dropdown>
-      				  <button id="split-button" type="button" class="btn btn-success">Select Concepts</button>
-				      <button type="button" class="btn btn-success" uib-dropdown-toggle>
-				        <span class="caret"></span>
-				        <span class="sr-only">Split button!</span>
-				      </button>
-				      <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
-				        <li role="menuitem"ng-repeat='concept in possConcepts track by $index' ng-click='addConcept(concept, $index, concepts, possConcepts)'>{{concept}}</li>
-				      </ul>
-				</div>
-				 <div class='inline' ng-repeat='concept in concepts track by $index' ng-click='addConcept(concept, $index, possConcepts, concepts)'>{{concept}}</div>
-			</div>
-			<hr>
-			<new-var-form></new-var-form>
-			
 		</div>
-		<!--Right side of the page-->
-		<div class="col-md-6 col-sm-12 " id="right-page">
-			<new-sprite-form></new-sprite-form>
-		<div class="inline col-md-6 col-sm-12" >
+	</div>
+
+	<div class='col-xs-12 col-sm-6 col-md-9'>
+		<md-select class='select-background inline' placeholder="Select background" ng-model="page.boardBackground">
+     		<md-option ng-repeat='image in backgrounds' value='{{image}}'>{{image}}</md-option>
+ 		</md-select>
+	 	<p class='inline'>Character start position</p>
+		<new-sprite-form></new-sprite-form>
 		<div class='inline sprites-list inline col-md-6 col-xs-12'>
 			<sprite-thumbnail ng-repeat='sprite in savedSprites'></sprite-thumbnail>
 		</div>
-		<!--game board-->
-			<div id="canvas" class="img-square">
-				<div id="cr-stage" ng-style="{background: url({{page.boardBackground}})}" class="text-center center-block">
-				<div ng-repeat="i in grid track by $index" style="height:{{size}}; width:{{size}}" class="square"></div>
-				</div>
-			</div>
-		</div>
-		</div>
-		<div class="col-md-6 col-sm-12">
+	</div>
+
+	</div>
+
+	<div class="col-md-6 col-sm-12">
 
 		<!--dropdown to select tools-->
 		<div class="btn-group inline" uib-dropdown>
@@ -74,6 +72,92 @@
 		</div>
 			<!--the page's toolbox-->
 			<tool-box></tool-box>
+	</div>
+	<div class="col-md-6 col-sm-12 inline">
+		<spell></spell>
+	</div>
+
+	<button type="submit" class="btn btn-large create-btn text-center center-block"><h4>Save Page</h4></button>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!--Left side of the page-->
+	<!-- 
+	<form ng-submit='savePage()'>
+		<button type='submit'>Save Page</button>
+
+				<div class="hint">
+					
+				</div>
+					<!--<label for='concepts'>Select Concepts</label>-->
+				
+				<!-- <div class="btn-group inline" uib-dropdown>
+      				  <button id="split-button" type="button" class="btn btn-success">Select Concepts</button>
+				      <button type="button" class="btn btn-success" uib-dropdown-toggle>
+				        <span class="caret"></span>
+				        <span class="sr-only">Split button!</span>
+				      </button>
+				      <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
+				        <li role="menuitem"ng-repeat='concept in possConcepts track by $index' ng-click='addConcept(concept, $index, concepts, possConcepts)'>{{concept}}</li>
+				      </ul>
+				</div>
+				 <div class='inline' ng-repeat='concept in concepts track by $index' ng-click='addConcept(concept, $index, possConcepts, concepts)'>{{concept}}</div>
+			</div> -->
+			<!--  
+			<hr>
+			
+			
+		</div>
+		<!--Right side of the page
+		<div class="col-md-6 col-sm-12 " id="right-page">
+			<new-sprite-form></new-sprite-form>
+		<div class="inline col-md-6 col-sm-12" >
+		<div class='inline sprites-list inline col-md-6 col-xs-12'>
+			<sprite-thumbnail ng-repeat='sprite in savedSprites'></sprite-thumbnail>
+		</div>
+		<!--game board
+			
+		</div>
+		</div>
+		<div class="col-md-6 col-sm-12">
+
+		<!--dropdown to select tools
+		<div class="btn-group inline" uib-dropdown>
+	        <button type="button" class="btn tool" uib-dropdown-toggle>
+	        	<span>Select tools</span>
+		        <span class="caret"></span>
+		        <span class="sr-only">Split button!</span>
+	        </button>
+	        <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
+	        	<li role="menuitem"ng-repeat='tool in toolsPoss track by $index' ng-click='addTool(tool, $index, "tool")'>{{tool}}</li>
+	        </ul>
+		</div>
+				<!--dropdown to select directions
+		<div class="btn-group inline" uib-dropdown>
+			<button type="button" class="btn direction" uib-dropdown-toggle>
+	        	<span>Select Directions</span>
+		        <span class="caret"></span>
+		        <span class="sr-only">Split button!</span>
+	        </button>
+	        <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
+	        	<li role="menuitem"ng-repeat='tool in dirsPoss track by $index' ng-click='addTool(tool, $index, "direction")'>{{tool}}</li>
+	        </ul>
+		</div>
+			<!--the page's toolbox-
+			<tool-box></tool-box>
 		</div>
 
 		<div class="col-md-6 col-sm-12 inline">
@@ -84,9 +168,10 @@
 
 
 
-			<!--Drop box for spells/instructions-->
+			<!--Drop box for spells/instructions
 			<h5>Drag tools in here to tasks to be completed in order to win the level.  Only actions (ex, ask, pick up) can be requirements</h5>
-			<spell></spell>
+			
 		</div>
 	</form>
 </div>
+ --> 
