--- a/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
@@ -1,36 +1,51 @@
 <div class="sprite-carousel">
 	<h4>Add to Board</h4>
 	<uib-carousel no-wrap="false" class='col-xs-6 col-md-4'>
+<!--       <uib-slide ng-repeat="sprite in possSprites">
+        <img ng-src="{{sprite.img}}" style="margin:auto;"/>
+        <div ng-click='selectImg(sprite)' class=" button btn btn-default">Select</div>
+      </uib-slide> -->
+<!--       <uib-slide ng-repeat="sprite in possSmSprites">
+      	<div style='background:url(images/sprites.png) {{sprite.pos[0]*64}}px {{sprite.pos[1]*64}}px; width: 64px; height:64px'></div>
+        <div ng-click='selectImg(sprite)' class=" button btn btn-default">Select</div>
+      </uib-slide> -->
       <uib-slide ng-repeat="sprite in possSprites">
-        <img ng-src="{{sprite.img}}" style="margin:auto;" class="sprite-thumbnail">
+      	<div style='background:url({{sprite.loc}}) {{0-sprite.pos[0]*64}}px {{0-sprite.pos[1]*64}}px; width: 64px; height:64px'></div>
         <div ng-click='selectImg(sprite)' class=" button btn btn-default">Select</div>
       </uib-slide>
     </uib-carousel>
     </div>
 <div ng-show='newSprite.name' class='col-xs-6 col-md-8'>
 
-	<md-select class='sprite-props select-var-type inline' placeholder="Select type" ng-model="newSprite.type">
+	<md-select class='select-var-type inline' placeholder="Select type" ng-model="newSprite.type">
  		<md-option ng-repeat='type in ["Collectible", "Obstacle", "Person"]' value='{{type}}'>{{type}}</md-option>
 		</md-select>
-	<md-select class='sprite-props select-var-type inline' placeholder="Select name" ng-model="newSprite.varName">
+	<md-select class='select-var-type inline' placeholder="Select name" ng-model="newSprite.varName">
  		<md-option ng-repeat='name in spellVars' value='{{name.name}}'>{{name.name}}</md-option>
 		</md-select>
-		<md-select class='sprite-props select-var-type' placeholder="Select match" ng-model="newSprite.match">
+		<md-select class='select-var-type' placeholder="Select match" ng-model="newSprite.match">
  		<md-option ng-repeat='variable in spellVars' value='{{variable.name}}'>{{variable.name}}</md-option>
 		</md-select>
 	<div class='col-xs-12 col-md-6'>
-		<md-select class='sprite-props select-var-type' placeholder="x coodinate" ng-model="newSpritePos.x">
+		<md-select class='select-var-type' placeholder="x coodinate" ng-model="newSpritePos.x">
  			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
 		</md-select>
 	</div>
 	<div class='col-xs-12 col-sm-6'>
-		<md-select class='sprite-props select-var-type' placeholder="y coordinate" ng-model="newSpritePos.y">
+		<md-select class='select-var-type' placeholder="y coordinate" ng-model="newSpritePos.y">
  			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
 		</md-select>
 	</div>
 	<button class='button btn variable' ng-click="saveSprite()">Add to gameboard</button>	    	
 </div>
-<div>
-	
+<div class='clearfix'></div>
+	<!--sprites added to click and deleat-->
+<div class='sprites-list col-xs-3 col-sm-2 col md-1' ng-repeat='sprite in savedSprites'>
+	<span class="glyphicon glyphicon-remove pull-right" ng-click="removeSprite(sprite, $index)"></span>
+	<div style='background:url({{sprite.loc}}) {{sprite.pos[0]*64}}px {{sprite.pos[1]*64}}px; width: 64px; height:64px'></div>
+	<p class='no-padding-margin'>({{sprite.pos.x}},{{sprite.pos.y}})</p> 
+	<p class='no-padding-margin'>{{sprite.varName}}</p>
 </div>
+</div>
+
 		
