--- a/browser/js/level-editor/level-editor.html
+++ b/browser/js/level-editor/level-editor.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h2 class='text-center'>Create a New Story Page</h2>
+	<h2 class='text-center title-font'>Create a New Story Page</h2>
 	<div class='col-xs-12 col-sm-6 page-text page-section'>
 		<textarea type='text' rows='6' class='form-control' ng-model='page.text' placeholder='Enter page text'>
 		</textarea>
@@ -26,15 +26,16 @@
 
 	<div class='col-xs-12 page-section'>
 		<hr/>
-		<div class='title-font col-xs-12 col-sm-6 col-md-3 clearfix'>
-			<h3>Build Gameboard</h3>
+		<div class='col-xs-12 col-sm-6 col-md-3 clearfix'>
+			<h3 class='title-font '>Build Gameboard</h3>
 		</div>
-		<div class='title-font col-xs-12 col-sm-6 col-md-3'>
+		<div class='col-xs-12 col-sm-6 col-md-3'>
 			<p class='no-padding-margin inline'>Board background:</p>
 			<md-select class='select-background no-padding-margin inline' placeholder="Select image" ng-model="page.boardBackground">
-     			<md-option ng-repeat='image in backgrounds' value='{{image}}'>{{image}}</md-option>
+     			<md-option ng-repeat='image in backgrounds' value='{{image}}'><img ng-src="{{image}}" style="margin:auto;" class='background-img clearfix'/></md-option>
  			</md-select>
  		</div>
+ 		{{page.boardBackground}}
 		<div class='col-xs-12 col-sm-6 col-md-3'>
  			<p class='inline no-padding-margin'>Character start position:</p>
 			<div class='col-xs-12 col-sm-6'>
@@ -63,10 +64,7 @@
 		</div>
 	</div>		
 	<div class='col-xs-12 col-md-6'>
-			<new-sprite-form></new-sprite-form>
-		<div class='inline sprites-list inline col-md-6 col-xs-12'>
-			<sprite-thumbnail ng-repeat='sprite in savedSprites'></sprite-thumbnail>
-		</div>
+		<new-sprite-form></new-sprite-form>
 	</div>
 	<div class='clearfix page-section'></div>
 		<hr/>
@@ -103,101 +101,8 @@
 	</div>
 
 	<div class='row'>
-		<button ng-click='savePage(' class="btn btn-large create-btn text-center center-block"><h4>Save Page</h4></button>
+		<button ng-click='savePage()' class="btn btn-large create-btn text-center center-block"><h4>Save Page</h4></button>
 	</div>
 
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-	<!--Left side of the page-->
-	<!-- 
-	<form ng-submit='savePage()'>
-		<button type='submit'>Save Page</button>
-
-				<div class="hint">
-					
-				</div>
-					<!--<label for='concepts'>Select Concepts</label>-->
-				
-				<!-- <div class="btn-group inline" uib-dropdown>
-      				  <button id="split-button" type="button" class="btn btn-success">Select Concepts</button>
-				      <button type="button" class="btn btn-success" uib-dropdown-toggle>
-				        <span class="caret"></span>
-				        <span class="sr-only">Split button!</span>
-				      </button>
-				      <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
-				        <li role="menuitem"ng-repeat='concept in possConcepts track by $index' ng-click='addConcept(concept, $index, concepts, possConcepts)'>{{concept}}</li>
-				      </ul>
-				</div>
-				 <div class='inline' ng-repeat='concept in concepts track by $index' ng-click='addConcept(concept, $index, possConcepts, concepts)'>{{concept}}</div>
-			</div> -->
-			<!--  
-			<hr>
-			
-			
-		</div>
-		<!--Right side of the page
-		<div class="col-md-6 col-sm-12 " id="right-page">
-			<new-sprite-form></new-sprite-form>
-		<div class="inline col-md-6 col-sm-12" >
-		<div class='inline sprites-list inline col-md-6 col-xs-12'>
-			<sprite-thumbnail ng-repeat='sprite in savedSprites'></sprite-thumbnail>
-		</div>
-		<!--game board
-			
-		</div>
-		</div>
-		<div class="col-md-6 col-sm-12">
-
-		<!--dropdown to select tools
-		<div class="btn-group inline" uib-dropdown>
-	        <button type="button" class="btn tool" uib-dropdown-toggle>
-	        	<span>Select tools</span>
-		        <span class="caret"></span>
-		        <span class="sr-only">Split button!</span>
-	        </button>
-	        <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
-	        	<li role="menuitem"ng-repeat='tool in toolsPoss track by $index' ng-click='addTool(tool, $index, "tool")'>{{tool}}</li>
-	        </ul>
-		</div>
-				<!--dropdown to select directions
-		<div class="btn-group inline" uib-dropdown>
-			<button type="button" class="btn direction" uib-dropdown-toggle>
-	        	<span>Select Directions</span>
-		        <span class="caret"></span>
-		        <span class="sr-only">Split button!</span>
-	        </button>
-	        <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
-	        	<li role="menuitem"ng-repeat='tool in dirsPoss track by $index' ng-click='addTool(tool, $index, "direction")'>{{tool}}</li>
-	        </ul>
-		</div>
-			<!--the page's toolbox-
-			<tool-box></tool-box>
-		</div>
-
-		<div class="col-md-6 col-sm-12 inline">
-		<!--Add Sprites-->
-
-		
-
-
-
-
-			<!--Drop box for spells/instructions
-			<h5>Drag tools in here to tasks to be completed in order to win the level.  Only actions (ex, ask, pick up) can be requirements</h5>
-			
-		</div>
-	</form>
-</div>
- --> 
