--- a/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
@@ -10,7 +10,7 @@
         <div ng-click='selectImg(sprite)' class=" button btn btn-default">Select</div>
       </uib-slide> -->
       <uib-slide ng-repeat="sprite in possSprites">
-      	<div style='background:url({{sprite.loc}}) {{0-sprite.pos[0]*64}}px {{0-sprite.pos[1]*64}}px; width: 64px; height:64px'></div>
+      	<div style='background:url({{sprite.imgUrl}}) {{0-sprite.imgPos[0]*64}}px {{0-sprite.imgPos[1]*64}}px; width: 64px; height:64px'></div>
         <div ng-click='selectImg(sprite)' class=" button btn btn-default">Select</div>
       </uib-slide>
     </uib-carousel>
@@ -42,9 +42,9 @@
 	<!--sprites added to click and deleat-->
 <div class='sprites-list col-xs-3 col-sm-2 col md-1' ng-repeat='sprite in savedSprites'>
 	<span class="glyphicon glyphicon-remove pull-right" ng-click="removeSprite(sprite, $index)"></span>
-	<div style='background:url({{sprite.loc}}) {{0-sprite.pos[0]*64}}px {{0-sprite.pos[1]*64}}px; width: 64px; height:64px'></div>
-	<p class='no-padding-margin'>({{sprite.pos.x}},{{sprite.pos.y}})</p> 
-	<p class='no-padding-margin'>{{sprite.varName}}</p>
+	<div style='background:url({{sprite.imgUrl}}) {{0-sprite.imgPos[0]*64}}px {{0-sprite.imgPos[1]*64}}px; width: 64px; height:64px'></div>
+	<span class='no-padding-margin'>({{sprite.pos.x}},{{sprite.pos.y}})</span>
+	<span class='no-padding-margin'>{{sprite.varName}}</span>
 </div>
 </div>
 
