--- a/browser/js/common/directives/level-editor-stuff/new-var-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-var-form.html
@@ -18,4 +18,4 @@
 	      	<input ng-model="newVar.arg">
 	    </md-input-container>
 	</div>
-    <button class='btn variable'ng-click='addTool(newVar, null, "variable")'>Save Variable></button>
+    <button class='btn variable'ng-click='addTool(newVar, null, "variable")'>Save Variable</button>
