minor changes: homepage clickable, glossary formatting fix, gender chart has *preferred not to say

--- a/browser/js/common/directives/admin-stats/admin-stats.html
+++ b/browser/js/common/directives/admin-stats/admin-stats.html
@@ -27,6 +27,7 @@
 			<div class="col-sm-6 col-xs-12 text-center">
 				<p class="text-center"><b>Gender of users</b></p>
 				<div class="center-block text-center" id="genderChart"></div>
+				<span class="small" ng-if="genderDist['rather not say']">* {{genderDist['rather not say']}} users chose not to say</span>
 			</div>
 			
 
