board img changes

--- a/browser/js/level-editor/level-editor.html
+++ b/browser/js/level-editor/level-editor.html
@@ -49,6 +49,7 @@
 	 			</md-select>
 	 		</div>
 		</div>
+		<button class='btn direction' ng-click='setBoard()'>Set Board</button>
 	</div>
 	 		
 	<div class='col-xs-12 col-sm-6 col-md-3'>
