--- a/browser/js/level-editor/level-editor.html
+++ b/browser/js/level-editor/level-editor.html
@@ -1,59 +1,89 @@
-<div class="container">
-	<h2 class='text-center title-font'>Create a New Story Page</h2>
-	<div class='col-xs-12 col-sm-6 page-text page-section'>
-		<textarea type='text' rows='6' class='form-control' ng-model='page.text' placeholder='Enter page text'>
-		</textarea>
+<div class="panel level-editor">
+	<div class="panel-heading">
+		<h3 class='text-center'>Create a New Story Page</h3>
 	</div>
+
+	<div class="panel-body">
+		<div class='col-xs-12 col-sm-6'>
+			<textarea type='text' rows='6' class='form-control' ng-model='page.text' placeholder='Enter page text'>
+			</textarea>
+		</div>
 	<!-- this right-page id is imporant because it is used by craft to determine screen size.  it must be on a col-sm-6-->
-	<div class='col-xs-12 col-sm-6 hint'>
-		<md-input-container>
-	      	<label>Enter a hint</label>
-	      	<input ng-model="page.hint">
-	    </md-input-container>
-	    <!-- dropdown for concepts -->
-		<button class="col-sm-12 col-md-4 nav_button no-padding-margin" dropdown >
-			<md-button id="single-button" type="button" class="btn button md-primary btn-block" dropdown-toggle ng-disabled="disabled">
-			Select concepts<span class="caret"></span>
-			</md-button>
-			<ul class="list-group dropdown-menu concept-menu" role="menu" aria-labelledby="single-button">
-				<li ng-repeat="concept in possConcepts" ng-click="toggleConcept(concept, $event)" class="list-group-item">
-					<input type="checkbox" ng-model="clickedConcepts[concept]"/> {{concept}}
-				</li>
-			</ul>
-        </button>
+		<div class='col-xs-12 col-sm-6 hint'>
+			<md-input-container>
+		      	<label>Enter a hint</label>
+		      	<input ng-model="page.hint"/>
+		    </md-input-container>
+		    <!-- dropdown for concepts -->
+
+		    <!--TODO: Does this need to be a dropdown? can it just be an inline list of checkboxes?-->
+			<div class="col-sm-12 col-md-4 nav_button" dropdown >
+				<button id="single-button" type="button" class="btn btn-default btn-block" dropdown-toggle ng-disabled="disabled">
+				Select concepts<span class="caret"></span>
+				</button>
+				<ul class="list-group dropdown-menu concept-menu" role="menu" aria-labelledby="single-button">
+					<li ng-repeat="concept in possConcepts" ng-click="toggleConcept(concept, $event)" class="list-group-item">
+						<input type="checkbox" ng-model="clickedConcepts[concept]"/> {{concept}}
+					</li>
+				</ul>
+	        </div>
+		</div>
+
 	</div>
 	<!-- add a variable -->
 
-	<div class='col-xs-12 page-section'>
+	<div class='col-xs-12 panel-body'>
 		<hr/>
-		<div class='col-xs-12 col-sm-6 col-md-3 clearfix'>
-			<h3 class='title-font '>Build Gameboard</h3>
+
+		<div class="panel-heading">
+			<h3>Gameboard</h3>
 		</div>
-		<div class='col-xs-12 col-sm-6 col-md-3'>
-			<p class='no-padding-margin inline'>Board background:</p>
-			<md-select class='select-background no-padding-margin inline' placeholder="Select image" ng-model="page.boardBackground">
-     			<md-option ng-repeat='image in backgrounds' value='{{image}}'><img ng-src="{{image}}" style="margin:auto;" class='background-img clearfix'/></md-option>
- 			</md-select>
- 		</div>
- 		{{page.boardBackground}}
-		<div class='col-xs-12 col-sm-6 col-md-3'>
- 			<p class='inline no-padding-margin'>Character start position:</p>
-			<div class='col-xs-12 col-sm-6'>
-				<md-select class='no-padding-margin select-var-type' placeholder="X" ng-model="avitarPos.x">
-	     			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
-	 			</md-select>
-	 		</div>
- 			<div class='col-xs-12 col-sm-6'>
-				<md-select class='no-padding-margin select-var-type' placeholder="Y" ng-model="avitarPos.y">
-	     			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
-	 			</md-select>
-	 		</div>
-		</div>
+
+		<div class="panel-body">
+				<div class="form-group col-xs-12 col-sm-6 col-md-3">
+					<p><b>Board background:</b></p>
+
+					<div class="col-xs-12">
+						<md-select class='select-background' placeholder="Select image" ng-model="page.boardBackground">
+			     			<md-option ng-repeat='image in backgrounds' value='{{image}}'><img ng-src="{{image}}" style="margin:auto;" class='background-img'/></md-option>
+		 				</md-select>
+		 			</div>
+
+	 			</div>
+
+		 		<div class="form-group col-xs-12 col-sm-6 col-md-3">
+		 			<p><b>Character start position:</b></p>
+					<div class='col-xs-12 col-sm-6'>
+						<md-select placeholder="X" ng-model="avitarPos.x">
+			     			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
+			 			</md-select>
+			 		</div>
+		 			<div class='col-xs-12 col-sm-6'>
+						<md-select placeholder="Y" ng-model="avitarPos.y">
+			     			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
+			 			</md-select>
+			 		</div>
+
+			 	</div>
+
+
+			 	
+			</div>
+
+			<div class="panel-body">
+				<div class='col-xs-12 col-sm-6 col-md-3'>
+					<new-var-form></new-var-form>		
+				</div>
+
+				<div class='col-sm-12 col-md-9'>
+					<new-sprite-form></new-sprite-form>
+				</div>
+
+			</div>
 	</div>
+</div>
 	 		
-	<div class='col-xs-12 col-sm-6 col-md-3'>
-		<new-var-form></new-var-form>		
-	</div>
+
 	<!-- gameboard -->
 	<div class='col-xs-12 col-sm-6 col-md-3' id='right-page'>
 		<h4 class='text-center'>Current Gameboard</h4>
@@ -63,9 +93,7 @@
 			</div>
 		</div>
 	</div>		
-	<div class='col-xs-12 col-md-6'>
-		<new-sprite-form></new-sprite-form>
-	</div>
+
 	<div class='clearfix page-section'></div>
 		<hr/>
 	<div class='row page-section'>
