adjusted button font, normalized style on level-editor, get (safe) text saved, general reformatting

--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -4,7 +4,7 @@
 		<div class="clearfix">
 			<h3 ng-if="!makingNewLevel" class="inline col-sm-3 col-xs-12 btnpadding">My spell</h3>
 
-			<h3 ng-if="makingNewLevel" class="inline col-sm-3 col-xs-12 btnpadding">Level Requirements</h3>
+			<h4 ng-if="makingNewLevel" class="inline col-sm-3 col-xs-12">Level Requirements</h4>
 
 			<h3 ng-if="!makingNewLevel">
 				<button class="btn inline col-sm-3  btn-space" ng-click="resetLevel()">Clear</button>
