--- a/browser/js/level-editor/level-editor.html
+++ b/browser/js/level-editor/level-editor.html
@@ -28,11 +28,11 @@
 		<!-- <div class='col-xs-12 col-sm-6 hint'>
 			
 
-			<div class="col-sm-12 col-md-4 nav_button" dropdown >
+			<div class="col-sm-12 col-md-4 nav_button" uib-dropdown >
 				<button id="single-button" type="button" class="btn btn-default btn-block" dropdown-toggle ng-disabled="disabled">
 				Select concepts<span class="caret"></span>
 				</button>
-				<ul class="list-group dropdown-menu concept-menu" role="menu" aria-labelledby="single-button">
+				<ul class="list-group uib-dropdown-menu concept-menu" role="menu" aria-labelledby="single-button">
 					<li ng-repeat="concept in possConcepts" ng-click="toggleConcept(concept, $event)" class="list-group-item">
 						<input type="checkbox" ng-model="clickedConcepts[concept]"/> {{concept}}
 					</li>
@@ -47,12 +47,9 @@
 	        	<p><b>Concepts used in this level:</b></p>
 	        	<div class="inline col-xs-12" ng-repeat="concept in possConcepts" ng-click="toggleConcept(concept, $event)">
 					<input type="checkbox" ng-model="clickedConcepts[concept]"/> {{concept}}
-	        	</div>
-		        </div>
-	        </div>
-        </div>
-
-
+				</li>
+			</ul>
+        </button>
 	</div>
 	<!-- add a variable -->
 
