fixed merge conflicts

--- a/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
@@ -28,7 +28,7 @@
 		<md-select class='col-sm-6 col-xs-12' placeholder="X*" ng-model="newSprite.pos[0]" required>
  			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
 		</md-select>
-		<md-select class='col-sm-6 col-xs-12' placeholder="Y*" ng-model="newSprite.pos[1] required">
+		<md-select class='col-sm-6 col-xs-12' placeholder="Y*" ng-model="newSprite.pos[1]" required>
  			<md-option ng-repeat='num in boardLength()' value='{{num}}'>{{num}}</md-option>
 		</md-select>
 	</div>
