--- a/browser/js/common/directives/level-editor-stuff/new-var-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-var-form.html
@@ -1,4 +1,6 @@
-<form name='newVarForm' ng-sumbit='addTool(newVar, null, "variable")' novalidate>
+<!-- <form name='newVarForm' ng-sumbit='newVarForm.$valid && addTool(newVar, null, "variable")' novalidate> -->
+	
+<form name='newVarForm'>
 	<p><b>Create a variable</b></p>
 	<md-select class='select-var-type' placeholder="Select type" ng-model="newVar.varType" name='newVar.varType' required>
 		<md-option ng-repeat='type in varTypes' value='{{type}}'>{{type}}</md-option>
@@ -12,11 +14,13 @@
 			<md-option ng-repeat='type in varFnTypes' value='{{type}}'>{{type}}</md-option>
 		</md-select>
 	</div>
-	<div ng-if='newVar.fnType === "match" || newVar.fnType === "holding"'>
+	<div ng-if='newVar.varType === "condition" &&newVar.fnType === "match" || newVar.fnType === "holding"'>
 		<md-input-container class='inline select-var-type'>
 	      	<label>Enter variable to match</label>
-	      	<input ng-model="newVar.arg" name='newVar.arg' ng-required='newVar.fnType === "match" || newVar.fnType === "holding"' ng-maxlength="50">
+	      	<input ng-model="newVar.arg" name='newVar.arg' ng-required='newVar.varType === "condition" && newVar.fnType === "match" || newVar.fnType === "holding"' ng-maxlength="50">
 	    </md-input-container>
 	</div>
-    <button class='btn green text-center center-block' type='submit'>Save Variable</button>
+
+	    <button class='btn green text-center center-block' ng-click='addTool(newVar, null, "variable")'>Save Variable</button>
+<!--     <button class='btn green text-center center-block' type='submit'>Save Variable</button> -->
     </form>
